[package]
name = "sbis_build_status"
version = "0.1.0"
authors = ["as.larin@tensor.ru"]
edition = "2018"

[dependencies]
chrono = "0.4"
futures = "0.3"
rust-ini = "0.18"
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.23"
telegram-bot = "0.8"
tokio = {version = "0.2", features = ["macros", "time"]}

[dev-dependencies]
tempfile ="3.2"