[package]
name = "sbis_build_status"
version = "0.1.0"
authors = ["as.larin@tensor.ru"]
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3"
rust-ini = "0.18"
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.25"
telegram-bot = "0.8"
tokio = {version = "0.2", features = ["macros", "time"]}
async-trait = "0.1.59"
teloxide = "0.12.0"

[dev-dependencies]
tempfile ="3.3"