[package]
name = "sbis_build_status"
version = "0.1.0"
authors = ["as.larin@tensor.ru"]
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3"
rust-ini = "0.21"
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.30"
tokio = "1.39"
teloxide = "0.12"

[dev-dependencies]
tempfile ="3.12"